Refactor IOService opening into IOKitUtil